public interface Actividad {
    Double total();
    Double ajustePorFormaDePago(EstrategiaFormaPago formaDePago);
}
